In Hangman, set a div around each word to prevent letter wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,3 +168,9 @@ p, #theHint{color:#bebebe;}
         padding-right:0px;
     }
 }
+
+
+.singleWord{
+    display: inline-block;
+    margin-right:30px;
+}
